controllers/nohup.out

> balance-transfer@1.0.0 start /home/ubuntu/elamawallet
> node app.js

/home/ubuntu/elamawallet/controllers/wallet.js:170
     return "eyJvcmlnaW5hbCI6IiIsIlNpZ25hdHVyZSI6IiIsInRvIjoiMWQwYzBmOGIxMWU0NTA1NzkzNGRhNzljODkxOWI4Zjk1NjYyYTk3ZTVkZGM1MTJjY2VmMGJiMmI0YWI0Yzc1NiIsImFtb3VudCI6IjQwMDAifQo=.ELAMA.3046022100e59b2fe032186e7f8933b5660257d29bde65c7ce4a62867d3239d3861016eb5b022100e9bb86344b0101d7dd297433d57452ebb9e77e9935844cbc2820c70ffd22e2f8
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/ubuntu/elamawallet/controllers/appController.js:29:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! balance-transfer@1.0.0 start: `node app.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the balance-transfer@1.0.0 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/ubuntu/.npm/_logs/2019-11-08T04_16_35_135Z-debug.log
